test/compile_errors/err_legacy_type_enum.w
//! expect-error: use 'enum' for enum declarations
type Direction = North | South | East | West

fn main:
    let _ = Direction.North
